[package]
name = "Telegram_Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "=0.10.0", features = ["macros", "auto-send"] }
tokio = { version = "=1.32.0", features = ["full"] }
serde = { version = "=1.0.188", features = ["derive"] }
serde_json = "=1.0.105"
log = "=0.4.20"
pretty_env_logger = "=0.5.0"
anyhow = "=1.0.75"
url = "=2.4.1"
idna = "=0.5.0"
openssl = "=0.10.57"
openssl-sys = "=0.9.93"
indexmap = "=2.2.6"
rc-box = "=1.2.0"
erasable = "=1.2.1"
tokio-stream = "=0.1.15"
reqwest = "0.11.27"